--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,7 +1,7 @@
 {
   "join_meeting": "Join meeting",
   "hello": "Hello",
-  "intro_first_title": "Easy &amp; quick join \n meeting",
+  "intro_first_title": "Easy & quick join \n meeting",
   "intro_first": "Ijmeet lets you make video calls, voice calls",
   "intro_first_2": "with friends and colleague",
   "mobile_number": "Mobile Number",
